<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="dutDWord" Id="{dae1fc6f-b0fb-4372-9e2d-f4a85a016242}">
    <Declaration><![CDATA[TYPE dutDWord :
STRUCT

	memLoc: UDINT;
	

	b01: BOOL;
	b02: BOOL;
	b03: BOOL;
	b04: BOOL;
	b05: BOOL;
	b06: BOOL;
	b07: BOOL;
	b08: BOOL;
	
	b11: BOOL;
	b12: BOOL;
	b13: BOOL;
	b14: BOOL;
	b15: BOOL;
	b16: BOOL;
	b17: BOOL;
	b18: BOOL;
	
	b21: BOOL;
	b22: BOOL;
	b23: BOOL;
	b24: BOOL;
	b25: BOOL;
	b26: BOOL;
	b27: BOOL;
	b28: BOOL;
	
	b31: BOOL;
	b32: BOOL;
	b33: BOOL;
	b34: BOOL;
	b35: BOOL;
	b36: BOOL;
	b37: BOOL;
	b38: BOOL;
	
	hexVal: DWORD;
	
	valStr:STRING(4);
	
	
	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>