<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="typeCombineString" Id="{e93c70c0-3a85-425b-935e-900cd907fe4b}">
    <Declaration><![CDATA[TYPE typeCombineString :
UNION
    arryDINT 	:DWORD; //2 legs
    qString 	:STRING[4];  //better
END_UNION
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>