<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_DataCombine" Id="{40634ef8-8267-4365-b826-cbfc0c1a3356}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_DataCombine
VAR
convString:typeCombineString;

	testDWORD: DWORD;
END_VAR

VAR_INPUT
	iWordData:DWORD;
	iRealHEXConv:INT;
	iWordSize:INT; //memsize
END_VAR



VAR_OUTPUT
	outputRow: dutDWord;
END_VAR

VAR_IN_OUT
	blockCount:DWORD; //number of block calls
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[//theme:hw_McgMbhOk

//count number of block usage
blockCount := blockCount +1;


//32bit word
//16 bit word to add switch
//8 bit word to add switch
//etc


//BOOL view
actConvertBOOL_Swap(); //swap for variant 1
//switch
actConvertBOOL(); //standard swap


//REAL view
outputRow.floatVal := DWORD_TO_REAL(iWordData); //apply swapping


//convert
convString.arryDINT := iWordData;

//shift bytes in word if number of bytes is not displayed in WORD on HMI
actShiftBytes();


//string view
outputRow.valStr := convString.qString;


outputRow.hexVal := DWORD_TO_HEXSTR(in:=iWordData, iPrecision:=8,bLoCase:=FALSE);

outputRow.memLoc := blockCount + ioView.memoffset;

//config for row
actConfigRow();

actHideBytes();



]]></ST>
    </Implementation>
    <Action Name="actConfigRow" Id="{7051bee0-fced-4425-8876-b37e7651bca6}">
      <Implementation>
        <ST><![CDATA[//show / hide the HEX or REAL

IF iRealHEXConv = 0 THEN
	outputRow.ShowHex := TRUE;
	outputRow.ShowREAL := FALSE;
	ELSE
	outputRow.ShowREAL := TRUE;
	outputRow.ShowHex := FALSE;
END_IF



]]></ST>
      </Implementation>
    </Action>
    <Action Name="actConvertBOOL" Id="{328708a5-a2e9-41b9-a5d1-4d33c7be475f}">
      <Implementation>
        <ST><![CDATA[
//byte 0
outputRow.b01 := iWordData.0;
outputRow.b02 := iWordData.1;
outputRow.b03 := iWordData.2;
outputRow.b04 := iWordData.3;
outputRow.b05 := iWordData.4;
outputRow.b06 := iWordData.5;
outputRow.b07 := iWordData.6;
outputRow.b08 := iWordData.7;

//byte 1
outputRow.b11 := iWordData.8;
outputRow.b12 := iWordData.9;
outputRow.b13 := iWordData.10;
outputRow.b14 := iWordData.11;
outputRow.b15 := iWordData.12;
outputRow.b16 := iWordData.13;
outputRow.b17 := iWordData.14;
outputRow.b18 := iWordData.15;

//byte 2
outputRow.b21 := iWordData.16;
outputRow.b22 := iWordData.17;
outputRow.b23 := iWordData.18;
outputRow.b24 := iWordData.19;
outputRow.b25 := iWordData.20;
outputRow.b26 := iWordData.21;
outputRow.b27 := iWordData.22;
outputRow.b28 := iWordData.23;

//byte 3
outputRow.b31 := iWordData.24;
outputRow.b32 := iWordData.25;
outputRow.b33 := iWordData.26;
outputRow.b34 := iWordData.27;
outputRow.b35 := iWordData.28;
outputRow.b36 := iWordData.29;
outputRow.b37 := iWordData.30;
outputRow.b38 := iWordData.31;]]></ST>
      </Implementation>
    </Action>
    <Action Name="actConvertBOOL_Swap" Id="{1f5ca550-2bab-44b6-8f5e-0c2ca8175b8f}">
      <Implementation>
        <ST><![CDATA[
//byte 0
outputRow.b01 := iWordData.0;
outputRow.b02 := iWordData.1;
outputRow.b03 := iWordData.2;
outputRow.b04 := iWordData.3;
outputRow.b05 := iWordData.4;
outputRow.b06 := iWordData.5;
outputRow.b07 := iWordData.6;
outputRow.b08 := iWordData.7;

//byte 1
outputRow.b11 := iWordData.8;
outputRow.b12 := iWordData.9;
outputRow.b13 := iWordData.10;
outputRow.b14 := iWordData.11;
outputRow.b15 := iWordData.12;
outputRow.b16 := iWordData.13;
outputRow.b17 := iWordData.14;
outputRow.b18 := iWordData.15;

//byte 2
outputRow.b21 := iWordData.16;
outputRow.b22 := iWordData.17;
outputRow.b23 := iWordData.18;
outputRow.b24 := iWordData.19;
outputRow.b25 := iWordData.20;
outputRow.b26 := iWordData.21;
outputRow.b27 := iWordData.22;
outputRow.b28 := iWordData.23;

//byte 3
outputRow.b31 := iWordData.24;
outputRow.b32 := iWordData.25;
outputRow.b33 := iWordData.26;
outputRow.b34 := iWordData.27;
outputRow.b35 := iWordData.28;
outputRow.b36 := iWordData.29;
outputRow.b37 := iWordData.30;
outputRow.b38 := iWordData.31;]]></ST>
      </Implementation>
    </Action>
    <Action Name="actHideBytes" Id="{d53b804a-3585-473d-be22-eacb16a407f6}">
      <Implementation>
        <ST><![CDATA[
CASE iWordSize OF
	0: //8bit
	outputRow.Hideb0 := FALSE;
	outputRow.Hideb1 := TRUE;
	outputRow.Hideb2 := TRUE;
	outputRow.Hideb3 := TRUE;
	
	1: //16bit
	outputRow.Hideb0 := FALSE;
	outputRow.Hideb1 := FALSE;
	outputRow.Hideb2 := TRUE;
	outputRow.Hideb3 := TRUE;
	
	2: //32bit
	outputRow.Hideb0 := FALSE;
	outputRow.Hideb1 := FALSE;
	outputRow.Hideb2 := FALSE;
	outputRow.Hideb3 := FALSE;
	
	3: //not used
	outputRow.Hideb0 := TRUE;
	outputRow.Hideb1 := TRUE;
	outputRow.Hideb2 := TRUE;
	outputRow.Hideb3 := TRUE;
	
END_CASE]]></ST>
      </Implementation>
    </Action>
    <Action Name="actShiftBytes" Id="{a5d630a1-b97f-412e-9751-d13850fdaee1}">
      <Implementation>
        <ST><![CDATA[CASE iWordSize OF
	0: //8bit
	convString.arryDINT :=  convString.arryDINT AND 16#000000FF;
	
	1: //16bit
	convString.arryDINT := convString.arryDINT AND 16#0000FFFF;
	
	
	2: //32bit
	
	//no shift
	convString.arryDINT := convString.arryDINT ;
	
	3: //not used
	outputRow.Hideb0 := TRUE;
	outputRow.Hideb1 := TRUE;
	outputRow.Hideb2 := TRUE;
	outputRow.Hideb3 := TRUE;
	
END_CASE]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="FB_DataCombine">
      <LineId Id="14" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="139" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="83" Count="2" />
      <LineId Id="62" Count="1" />
      <LineId Id="59" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="64" Count="1" />
      <LineId Id="56" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="88" Count="1" />
      <LineId Id="67" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="166" Count="2" />
      <LineId Id="165" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="97" Count="1" />
      <LineId Id="95" Count="1" />
      <LineId Id="80" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="60" Count="0" />
    </LineIds>
    <LineIds Name="FB_DataCombine.actConfigRow">
      <LineId Id="10" Count="1" />
      <LineId Id="1" Count="1" />
      <LineId Id="12" Count="0" />
      <LineId Id="4" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="8" Count="1" />
      <LineId Id="7" Count="0" />
      <LineId Id="3" Count="0" />
    </LineIds>
    <LineIds Name="FB_DataCombine.actConvertBOOL">
      <LineId Id="2" Count="38" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="FB_DataCombine.actConvertBOOL_Swap">
      <LineId Id="2" Count="38" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="FB_DataCombine.actHideBytes">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="1" />
      <LineId Id="12" Count="4" />
      <LineId Id="18" Count="2" />
      <LineId Id="17" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="23" Count="3" />
      <LineId Id="22" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="29" Count="3" />
      <LineId Id="28" Count="0" />
      <LineId Id="7" Count="1" />
    </LineIds>
    <LineIds Name="FB_DataCombine.actShiftBytes">
      <LineId Id="2" Count="1" />
      <LineId Id="7" Count="2" />
      <LineId Id="13" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="27" Count="1" />
      <LineId Id="19" Count="7" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>